--- a/app/src/main/res/layout/fragment_sources_filters.xml
+++ b/app/src/main/res/layout/fragment_sources_filters.xml
@@ -5,75 +5,85 @@
     android:background="@color/white"
     android:layout_height="match_parent">
 
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/filter_buttons_group"
+    <TextView
+        android:id="@+id/textholder_category"
         android:layout_width="wrap_content"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:text="Category"
+        android:textSize="14sp"
         android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/category_chip_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/textholder_category"
+        app:layout_constraintTop_toBottomOf="@id/textholder_category"
         app:singleSelection="true">
 
-        <Button
-            android:id="@+id/popular_button"
-            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
-            android:layout_width="125dp"
-            android:layout_height="match_parent"
-            android:text="@string/filter_popular"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/new_button"
-            style="?attr/materialButtonOutlinedStyle"
-            android:backgroundTint="@color/chip_background_color"
-            android:layout_width="125dp"
-            android:layout_height="match_parent"
-            android:text="@string/filter_new"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/relevant_button"
-            style="?attr/materialButtonOutlinedStyle"
-            android:backgroundTint="@color/chip_background_color"
-            android:layout_width="125dp"
-            android:layout_height="match_parent"
-            android:text="@string/filter_relevant"
-            android:textSize="16sp" />
-
-    </com.google.android.material.button.MaterialButtonToggleGroup>
-
-    <TextView
-        android:id="@+id/textholder_date"
+    <com.google.android.material.chip.Chip
+        android:id="@+id/category_chip_business"
+        style="@style/Widget.Material3.Chip.Suggestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Date"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/filter_buttons_group"
-        app:layout_constraintTop_toBottomOf="@id/filter_buttons_group" />
+        android:text="@string/category_business"
+        app:chipBackgroundColor="@color/chip_background_color" />
 
-    <Button
-        android:id="@+id/calendar_button"
-        style="?attr/materialIconButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:icon="@drawable/calendar_button_icon"
-        app:layout_constraintBottom_toBottomOf="@id/textholder_date"
-        app:layout_constraintEnd_toEndOf="@id/filter_buttons_group"
-        app:layout_constraintTop_toTopOf="@id/textholder_date" />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/category_chip_science"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_science"
+            app:chipBackgroundColor="@color/chip_background_color" />
 
-    <TextView
-        android:id="@+id/calendar_picked_date_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
-        android:text="Choose data"
-        android:textColor="@color/blue60"
-        app:layout_constraintBottom_toBottomOf="@id/calendar_button"
-        app:layout_constraintEnd_toStartOf="@id/calendar_button"
-        app:layout_constraintTop_toTopOf="@id/calendar_button" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/category_chip_general"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_general"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/category_chip_health"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_health"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/category_chip_entertainment"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_entertainment"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/category_chip_sports"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_sports"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/category_chip_technology"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_technology"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+    </com.google.android.material.chip.ChipGroup>
 
     <TextView
         android:id="@+id/textholder_language"
@@ -83,21 +93,19 @@
         android:fontFamily="sans-serif-medium"
         android:text="Language"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/textholder_date"
-        app:layout_constraintTop_toBottomOf="@id/textholder_date" />
+        app:layout_constraintStart_toStartOf="@id/category_chip_group"
+        app:layout_constraintTop_toBottomOf="@id/category_chip_group" />
 
     <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chip_group"
+        android:id="@+id/language_chip_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:checkedChip="@+id/chip_english"
         app:layout_constraintStart_toStartOf="@+id/textholder_language"
         app:layout_constraintTop_toBottomOf="@id/textholder_language"
-        app:selectionRequired="true"
         app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_english"
+            android:id="@+id/language_chip_english"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -105,16 +113,15 @@
             app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_russian"
+            android:id="@+id/language_chip_russian"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/language_russian"
             app:chipBackgroundColor="@color/chip_background_color" />
 
-
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_german"
+            android:id="@+id/language_chip_german"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,7 +129,7 @@
             app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_arabic"
+            android:id="@+id/language_chip_arabic"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -130,7 +137,7 @@
             app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_spanish"
+            android:id="@+id/language_chip_spanish"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -138,7 +145,7 @@
             app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_french"
+            android:id="@+id/language_chip_french"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -146,7 +153,7 @@
             app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_italian"
+            android:id="@+id/language_chip_italian"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -154,7 +161,7 @@
             app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/chip_сhinese"
+            android:id="@+id/language_chip_сhinese"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
